etsl 1027 media cta bugs - align with header logo

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/media-cta/media-cta.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/media-cta/media-cta.scss
@@ -400,48 +400,6 @@
     }
 }
 
-//  @media (min-width: 768px) {
-//                 width: 98%;
-//             }
-
-// .media-cta-text-4-0 {
-//     .body-wrapper {
-//         .btn-text.btn-green {
-//             width: fit-content;
-//             @include font-family-lato;
-//             text-transform: uppercase;
-//             letter-spacing: toRem(2);
-//             font-size: toRem(12);
-//             padding-right: toRem(8);
-//             line-height: toRem(16);
-//             @media screen and (min-width: 992px) {
-//                 font-size: toRem(14);
-//                 padding-right: toRem(12);
-//                 line-height: toRem(20);
-//             }
-//                 @include rtlBlock() {
-//                 padding-right: 0;
-//                 padding-left: toRem(20);
-//                 font-weight: get-font-weight("light");
-//             }
-//             &:before {
-//                 padding: toRem(2.6);
-//                 right: 0;
-//                 @media screen and (min-width: 992px) { 
-//                     padding: toRem(3.25);
-//                 }
-//                     @include rtlBlock()  {
-//                     left: 0;
-//                     right: auto;
-//                 }
-//             }
-//             span.moreg {
-//                 font-size: inherit;
-//                 letter-spacing:inherit;
-//             }
-//         }
-//     }
-// }
 // with background image
 .media-cta-module-section.with-background-image {
     &::after {
@@ -871,6 +829,20 @@
 }
 .container-fix__width {
     &.media-cta-plan-full-width {
+        .media-cta-module-section .mod-wrap {
+            @media only screen and (min-device-width:768px)  { 
+                margin-left: toRem(12);
+                margin-right: toRem(12);
+            }
+            @media screen and (min-width: 992px) { 
+                margin-left: toRem(12);
+                margin-right: toRem(12);
+            }
+            @media only screen and (min-width : 1200px) { 
+                    margin-left: toRem(-12);
+                    margin-right: inherit;
+            }
+        }
         .media-cta-module-section {
             &,.cms-module-4-0 {
                 padding-left:toRem(15);
@@ -885,22 +857,8 @@
                  }
             }
         }
-        
-    //   .cms-module-4-0 {
-    //       .container {
-    //           padding-left: 15px !important;
-    //               padding-right: 15px !important;
-    //           @media (min-width: 768px) { 
-    //               padding-left: 15px !important;
-    //               padding-right: 15px !important;
-    //           }
-    //       }
-    //   }  
     }
 }
-    
-
-
 
 // *************************************
 // arabic overides
@@ -954,6 +912,20 @@
         .container-fix__width {
             &.media-cta-plan-full-width {
                 float: right;
+                .media-cta-module-section .mod-wrap {
+                    @media only screen and (min-device-width:768px)  { 
+                        margin-right: toRem(12);
+                    }
+                    @media screen and (min-width: 992px) { 
+                        margin-left: inherit;
+                        margin-right: toRem(12);
+                    }
+                    @media only screen and (min-width : 1200px) { 
+                            margin-right: toRem(-12);
+                            margin-left: inherit;
+                    }
+
+                }
             }
         }
     }
